# Thunar-Metadata-Properties

./: README.md  Thunar-Metadata-Properties.code-workspace  meson.build  thunar-metadata-properties-install.sh
doc/: index.html
doc/com.github.tudo75.thunar-metadata-properties/: FileHandler.create.html  FileHandler.get_page_title.html  FileHandler.get_properties_panel.html  FileHandler.html  ImageHandler.ImageHandler.html  ImageHandler.build_advanced_photo_data.html  ImageHandler.build_basic_info.html  ImageHandler.build_camera_data.html  ImageHandler.build_gps_data.html  ImageHandler.build_iptc_data.html  ImageHandler.file.html  ImageHandler.format_aperture.html  ImageHandler.format_exposure_time.html  ImageHandler.get_exposure_program_string.html  ImageHandler.get_flash_string.html  ImageHandler.get_metering_mode_string.html  ImageHandler.get_orientation_string.html  ImageHandler.get_page_title.html  ImageHandler.get_properties_panel.html  ImageHandler.get_tag_label.html  ImageHandler.get_white_balance_string.html  ImageHandler.grid.html  ImageHandler.html  ImageHandler.metadata.html  MediaHandler.EmbeddedImage.html  MediaHandler.EmbeddedImage.label.html  MediaHandler.EmbeddedImage.sample.html  MediaHandler.MediaHandler.html  MediaHandler.build_audio_ui.html  MediaHandler.build_video_ui.html  MediaHandler.detect_bitrate_mode.html  MediaHandler.display_embedded_images.html  MediaHandler.extract_tags_loose.html  MediaHandler.extract_tags_strict_container.html  MediaHandler.file.html  MediaHandler.gather_images_generic.html  MediaHandler.get_container_name.html  MediaHandler.get_duration_string.html  MediaHandler.get_first_stream.html  MediaHandler.get_page_title.html  (+187 more)
po/: LINGUAS  POTFILES  com.github.tudo75.thunar-metadata-properties.pot  en.po  it.po  meson.build
src/: main.vala
src/handlers/: file_handler.vala  image_handler.vala  legacy_office_handler.vala  media_handler.vala  office_handler.vala  pdf_handler.vala
src/utils/: gst_helpers.c  gst_helpers.h  image_helper.vala  ui_helper.vala
vapi/: thunarx-3.vapi
